--- a/app/src/main/res/layout/activity_main_page.xml
+++ b/app/src/main/res/layout/activity_main_page.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="stfn.personaltrainer.MainPage">
+    tools:context="stfn.personaltrainer.activities.MainPage">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
