--- a/app/src/main/res/menu/menu_main_page.xml
+++ b/app/src/main/res/menu/menu_main_page.xml
@@ -1,7 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="stfn.personaltrainer.MainPage">
+    tools:context="stfn.personaltrainer.activities.MainPage">
     <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
