--- a/app/src/main/res/layout/activity_training.xml
+++ b/app/src/main/res/layout/activity_training.xml
@@ -112,10 +112,12 @@
             android:id="@+id/repetitionsDone"
             android:layout_width="118dp"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="24dp"
             android:layout_marginTop="69dp"
-            android:onClick="goToPlanAndTimer"
+            android:onClick="goToPlanAndTimerOrTest"
             android:text="@string/startTraining"
             android:textAppearance="@style/TextAppearance.AppCompat.Button"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
